--- a/TravelBuddy/TravelBuddy.csproj
+++ b/TravelBuddy/TravelBuddy.csproj
@@ -16,5 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Views\LoginPage.cs" />
+    <Compile Remove="Views\CountriesPage.cs" />
   </ItemGroup>
 </Project>
