Add Generic ApiService

--- a/TravelBuddy/TravelBuddy.csproj
+++ b/TravelBuddy/TravelBuddy.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Infrastructure\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Views\LoginPage.cs" />
